--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     	<img src="aplogo.png" alt="">
 			<h1>ThisIsUs</h1>
-			<h2>AP Hogeschool Campus Ellermanstraat</h2>
+			<h2>AP Hogeschool Campus Ellermanstraat test</h2>
     </header>
 		<main>
 			<h3>Worden er te veel opdrachten opgegeven buiten de CMO-vakken?</h3>
